--- a/configs/basic_config.py.example
+++ b/configs/basic_config.py.example
@@ -25,8 +25,6 @@ if not os.path.exists(LOG_PATH):
 
 # 临时文件目录，主要用于文件对话
 BASE_TEMP_DIR = os.path.join(tempfile.gettempdir(), "chatchat")
-try:
+if os.path.isdir(BASE_TEMP_DIR):
     shutil.rmtree(BASE_TEMP_DIR)
-except Exception:
-    pass
 os.makedirs(BASE_TEMP_DIR, exist_ok=True)
