--- a/configs/model_config.py.example
+++ b/configs/model_config.py.example
@@ -1,4 +1,5 @@
 import os
+
 MODEL_ROOT_PATH = ""
 EMBEDDING_MODEL = "bge-large-zh-v1.5"  # bge-large-zh
 EMBEDDING_DEVICE = "auto"
@@ -12,32 +13,24 @@ RERANKER_MAX_LENGTH = 1024
 # 如果需要在 EMBEDDING_MODEL 中增加自定义的关键字时配置
 EMBEDDING_KEYWORD_FILE = "keywords.txt"
 EMBEDDING_MODEL_OUTPUT_PATH = "output"
+
 SUPPORT_AGENT_MODELS = [
     "chatglm3-6b",
-    "Qwen-14b-Chat",
-    "Qwen-1_8B-Chat",
-    "openai-api"
+    "openai-api",
+    "Qwen-14B-Chat",
+    "Qwen-7B-Chat",
 ]
 LLM_MODEL_CONFIG = {
-    # 意图识别不需要输出，模型后台知道就行
     "preprocess_model": {
-        "zhipu-api": {
-            "temperature": 0.4,
-            "max_tokens": 2048,
-            "history_len": 100,
+        "chatglm3-6b": {
+            "temperature": 0.01,
+            "max_tokens": 5,
             "prompt_name": "default",
             "callbacks": False
         },
     },
     "llm_model": {
         "chatglm3-6b": {
-            "temperature": 0.9,
-            "max_tokens": 4096,
-            "history_len": 3,
-            "prompt_name": "default",
-            "callbacks": True
-        },
-        "zhipu-api": {
             "temperature": 0.9,
             "max_tokens": 4000,
             "history_len": 5,
@@ -47,111 +40,28 @@ LLM_MODEL_CONFIG = {
     },
     "action_model": {
         "chatglm3-6b": {
-            "temperature": 0.01,
+            "temperature": 0.05,
             "max_tokens": 4096,
             "prompt_name": "ChatGLM3",
             "callbacks": True
         },
-        "openai-api": {
-            "temperature": 0.01,
-            "max_tokens": 4096,
-            "prompt_name": "GPT-4",
-            "callbacks": True
-        },
+
     },
     "postprocess_model": {
-        "chatglm3-6b": {
+        "zhipu-api": {
             "temperature": 0.01,
             "max_tokens": 4096,
             "prompt_name": "default",
             "callbacks": True
         }
     },
-
 }
-
-TOOL_CONFIG = {
-    "search_local_knowledgebase": {
-        "use": True,
-        "top_k": 10,
-        "score_threshold": 1,
-        "conclude_prompt": {
-            "with_result":
-                '<指令>根据已知信息，简洁和专业的来回答问题。如果无法从中得到答案，请说 "根据已知信息无法回答该问题"，'
-                '不允许在答案中添加编造成分，答案请使用中文。 </指令>\n'
-                '<已知信息>{{ context }}</已知信息>\n'
-                '<问题>{{ question }}</问题>\n',
-            "without_result":
-                '请你根据我的提问回答我的问题:\n'
-                '{{ question }}\n'
-                '请注意，你必须在回答结束后强调，你的回答是根据你的经验回答而不是参考资料回答的。\n',
-        }
-    },
-    "search_internet": {
-        "use": True,
-        "search_engine_name": "bing",
-        "search_engine_config":
-            {
-                "bing": {
-                    "result_len": 3,
-                    "bing_search_url": "https://api.bing.microsoft.com/v7.0/search",
-                    "bing_key": "",
-                },
-                "metaphor": {
-                    "result_len": 3,
-                    "metaphor_api_key": "",
-                    "split_result": False,
-                    "chunk_size": 500,
-                    "chunk_overlap": 0,
-                },
-                "duckduckgo": {
-                    "result_len": 3
-                }
-            },
-        "top_k": 10,
-        "verbose": "Origin",
-        "conclude_prompt":
-            "<指令>这是搜索到的互联网信息，请你根据这些信息进行提取并有调理，简洁的回答问题。如果无法从中得到答案，请说 “无法搜索到能回答问题的内容”。 "
-            "</指令>\n<已知信息>{{ context }}</已知信息>\n"
-            "<问题>\n"
-            "{{ question }}\n"
-            "</问题>\n"
-    },
-    "arxiv": {
-        "use": True,
-    },
-    "shell": {
-        "use": True,
-    },
-    "weather_check": {
-        "use": True,
-        "api-key": "",
-    },
-    "search_youtube": {
-        "use": False,
-    },
-    "wolfram": {
-        "use": False,
-    },
-    "calculate": {
-        "use": False,
-    },
-    "aqa_processor": {
-        "use": False,
-    },
-    "vqa_processor": {
-        "use": False,
-    },
-}
-
-# LLM 模型运行设备。设为"auto"会自动检测(会有警告)，也可手动设定为 "cuda","mps","cpu","xpu" 其中之一。
 LLM_DEVICE = "auto"
-
 ONLINE_LLM_MODEL = {
     "openai-api": {
         "model_name": "gpt-4-1106-preview",
         "api_base_url": "https://api.openai.com/v1",
-        "api_key": "",
+        "api_key": "sk-",
         "openai_proxy": "",
     },
     "zhipu-api": {
@@ -249,24 +159,31 @@ MODEL_PATH = {
         "bge-large-zh": "/media/zr/Data/Models/Embedding/bge-large-zh",
         "bge-large-zh-noinstruct": "BAAI/bge-large-zh-noinstruct",
         "bge-base-zh-v1.5": "BAAI/bge-base-zh-v1.5",
-        "bge-large-zh-v1.5": "/Models/bge-large-zh-v1.5",
+        "bge-large-zh-v1.5": "/share/home/zyx/Models/bge-large-zh-v1.5",
         "piccolo-base-zh": "sensenova/piccolo-base-zh",
         "piccolo-large-zh": "sensenova/piccolo-large-zh",
         "nlp_gte_sentence-embedding_chinese-large": "/Models/nlp_gte_sentence-embedding_chinese-large",
-        "text-embedding-ada-002": "Just write your OpenAI key like "sk-o3IGBhC9g8AiFvTGWVKsT*****" ",
+        "text-embedding-ada-002": "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",
     },
 
     "llm_model": {
+
+        "vicuna-7b-v1.5": "/share/official_pretrains/hf_home/vicuna-7b-v1.5",
+
+        "Mixtral-8x7B-v0.1": "/share/home/zyx/Models/Mixtral-8x7B-v0.1",
+
         "chatglm2-6b": "THUDM/chatglm2-6b",
         "chatglm2-6b-32k": "THUDM/chatglm2-6b-32k",
-        "chatglm3-6b": "/Models/chatglm3-6b",
+
+        "chatglm3-6b": "/share/home/zyx/Models/chatglm3-6b",
         "chatglm3-6b-32k": "THUDM/chatglm3-6b-32k",
 
-        "Yi-34B-Chat": "/data/share/models/Yi-34B-Chat",
+        "Yi-34B-Chat": "/share/home/zyx/Models/Yi-34B-Chat",
         "BlueLM-7B-Chat": "/Models/BlueLM-7B-Chat",
 
         "baichuan2-13b": "/media/zr/Data/Models/LLM/Baichuan2-13B-Chat",
         "baichuan2-7b": "/media/zr/Data/Models/LLM/Baichuan2-7B-Chat",
+
         "baichuan-7b": "baichuan-inc/Baichuan-7B",
         "baichuan-13b": "baichuan-inc/Baichuan-13B",
         'baichuan-13b-chat': 'baichuan-inc/Baichuan-13B-Chat',
@@ -324,13 +241,13 @@ MODEL_PATH = {
         "opt-66b": "facebook/opt-66b",
         "opt-iml-max-30b": "facebook/opt-iml-max-30b",
 
-        "Qwen-1_8B-Chat":"Qwen/Qwen-1_8B-Chat"
+        "Qwen-1_8B-Chat": "/home/zr/Models/Qwen-1_8B-Chat",
         "Qwen-7B": "Qwen/Qwen-7B",
         "Qwen-14B": "Qwen/Qwen-14B",
         "Qwen-7B-Chat": "Qwen/Qwen-7B-Chat",
-        "Qwen-14B-Chat": "Qwen/Qwen-14B-Chat",
-        "Qwen-14B-Chat-Int8": "Qwen/Qwen-14B-Chat-Int8",  # 确保已经安装了auto-gptq optimum flash-attn
-        "Qwen-14B-Chat-Int4": "/media/zr/Data/Models/LLM/Qwen-14B-Chat-Int4",  # 确保已经安装了auto-gptq optimum flash-attn
+        "Qwen-14B-Chat": "/share/home/zyx/Models/Qwen-14B-Chat",
+        "Qwen-14B-Chat-Int8": "Qwen/Qwen-14B-Chat-Int8",
+        "Qwen-14B-Chat-Int4": "/media/zr/Data/Models/LLM/Qwen-14B-Chat-Int4",
     },
 
 NLTK_DATA_PATH = os.path.join(os.path.dirname(os.path.dirname(__file__)), "nltk_data")
