--- a/requirements_api.txt
+++ b/requirements_api.txt
@@ -1,66 +1,64 @@
 # API requirements
 
-langchain==0.0.344
-langchain-experimental>=0.0.42
+torch>=2.1.2
+torchvision>=0.16.2
+torchaudio>=2.1.2
+
+langchain>=0.0.352
+langchain-experimental>=0.0.47
 pydantic==1.10.13
-fschat>=0.2.33
-xformers>=0.0.22.post7
-sentence_transformers
-transformers>=4.35.2
-torch==2.1.0  ##on Windows system, install the cuda version manually from https://pytorch.org/
-torchvision  #on Windows system, install the cuda version manually from https://pytorch.org/
-torchaudio  #on Windows system, install the cuda version manually from https://pytorch.org/
-openai>=1.3.7
-fastapi>=0.104
-sse_starlette
+fschat>=0.2.34
+xformers>=0.0.23.post1
+openai>=1.6.0
+sentence_transformers>=2.2.2
+transformers>=4.36.2
+fastapi>=0.105
 nltk>=3.8.1
 uvicorn>=0.24.0.post1
 starlette~=0.27.0
 unstructured[all-docs]==0.11.0
 python-magic-bin; sys_platform == 'win32'
 SQLAlchemy==2.0.19
-faiss-cpu # `conda install faiss-gpu -c conda-forge` if you want to accelerate with gpus
+faiss-cpu>=1.7.4
 accelerate>=0.24.1
 spacy>=3.7.2
-PyMuPDF
-rapidocr_onnxruntime
+PyMuPDF>=1.23.8
+rapidocr_onnxruntime>=1.3.8
 requests>=2.31.0
 pathlib>=1.0.1
 pytest>=7.4.3
-numexpr>=2.8.7
+numexpr>=2.8.8
 strsimpy>=0.2.1
 markdownify>=0.11.6
-tiktoken>=0.5.1
+tiktoken>=0.5.2
 tqdm>=4.66.1
-websockets
-numpy~=1.24.4
-pandas~=2.0.3
+websockets>=12.0
+numpy~=1.26.2
+pandas~=2.1.4
 einops>=0.7.0
-transformers_stream_generator==0.0.4
-vllm==0.2.2; sys_platform == "linux"
-httpx[brotli,http2,socks]>=0.25.2
+transformers_stream_generator>=0.0.4
+vllm>=0.2.6; sys_platform == "linux"
 
 # optional document loaders
-# rapidocr_paddle[gpu] # gpu accelleration for ocr of pdf and image files
-jq # for .json and .jsonl files. suggest `conda install jq` on windows
-# html2text # for .enex files
-# beautifulsoup4 # for .mhtml files
-# pysrt # for .srt files
+
+rapidocr_paddle[gpu]>=1.3.0.post5
+jq>=1.6.0
+html2text
+beautifulsoup4>=4.12.2
+pysrt>=1.1.2
 
 # Online api libs dependencies
 
-# zhipuai>=1.0.7 # zhipu
-# dashscope>=1.10.0 # qwen
-# volcengine>=1.0.106 # fangzhou
-
-# uncomment libs if you want to use corresponding vector store
-# pymilvus==2.1.3 # requires milvus==2.1.3
-# psycopg2
+zhipuai>=1.0.7，<=2.0.0
+dashscope>=1.13.6
+volcengine>=1.0.119
+pymilvus>=2.3.4
+# psycopg2==2.9.9
 # pgvector>=0.2.4
 
 # Agent and Search Tools
 
 arxiv>=2.0.0
 youtube-search>=2.1.2
-duckduckgo-search>=3.9.9
+duckduckgo-search>=4.1.0
 metaphor-python>=0.1.23
