更新Agent工具返回

--- a/configs/prompt_config.py.example
+++ b/configs/prompt_config.py.example
@@ -1,13 +1,11 @@
 PROMPT_TEMPLATES = {
     "preprocess_model": {
         "default":
-            '你只要回复0 和 1 ，代表不需要使用工具。以下几种问题不需要使用工具:'
-            '1. 介绍一下你自己, 回复0\n'
-            '2. 讲一个故事, 回复0\n'
-            '3. 给我开一个玩笑, 回复0\n'
-            '4. 我当前运行的文件夹是, 回复1\n'
-            '5. where is this cat, 回复1\n'
-            '6. 介绍一下像极了我大学, 回复1\n'
+            '你只要回复0 和 1 ，代表不需要使用工具。以下几种问题需要使用工具:'
+            '1. 需要联网查询的内容\n'
+            '2. 需要计算的内容\n'
+            '3. 需要查询实时性的内容\n'
+            '如果我的输入满足这几种情况，返回1。其他输入，请你回复0，你只要返回一个数字\n'
             '这是我的问题:'
     },
     "llm_model": {
