update requirements: 统一各文件依赖顺序，便于比对；移出streamlit-antd-components; jq默认安装; numexpr 限定 2.8.6 以兼容 py38

--- a/requirements_webui.txt
+++ b/requirements_webui.txt
@@ -1,6 +1,6 @@
 # WebUI requirements
 
-streamlit~=1.29.0
+streamlit~=1.29.0 # do remember to add streamlit to environment variables if you use windows
 streamlit-option-menu>=0.3.6
 streamlit-chatbox==1.1.11
 streamlit-modal>=0.1.0
