--- a/requirements.txt
+++ b/requirements.txt
@@ -25,7 +25,7 @@ faiss-cpu~=1.7.4 # `conda install faiss-gpu -c conda-forge` if you want to accel
 accelerate==0.24.1
 spacy~=3.7.2
 PyMuPDF~=1.23.8
-rapidocr_onnxruntime~=1.3.8
+rapidocr_onnxruntime==1.3.8
 requests>=2.31.0
 pathlib>=1.0.1
 pytest>=7.4.3
@@ -35,16 +35,17 @@ markdownify>=0.11.6
 tiktoken~=0.5.2
 tqdm>=4.66.1
 websockets>=12.0
-numpy~=1.26.2
-pandas~=2.1.4
+numpy~=1.24.4
+pandas~=2.0.3
 einops>=0.7.0
 transformers_stream_generator==0.0.4
 vllm==0.2.6; sys_platform == "linux"
-httpx[brotli,http2,socks]~=0.25.2
+httpx[brotli,http2,socks]==0.25.2
+llama-index
 
 # optional document loaders
 
-rapidocr_paddle[gpu]>=1.3.0.post5 # gpu accelleration for ocr of pdf and image files
+# rapidocr_paddle[gpu]>=1.3.0.post5 # gpu accelleration for ocr of pdf and image files
 jq>=1.6.0 # for .json and .jsonl files. suggest `conda install jq` on windows
 # html2text # for .enex files
 beautifulsoup4~=4.12.2 # for .mhtml files
@@ -52,7 +53,7 @@ pysrt~=1.1.2
 
 # Online api libs dependencies
 
-zhipuai>=1.0.7，<=2.0.0 # zhipu
+zhipuai>=1.0.7, <=2.0.0 # zhipu
 dashscope>=1.13.6 # qwen
 # volcengine>=1.0.119 # fangzhou
 
@@ -75,5 +76,4 @@ streamlit-option-menu>=0.3.6
 streamlit-chatbox==1.1.11
 streamlit-modal>=0.1.0
 streamlit-aggrid>=0.3.4.post3
-httpx[brotli,http2,socks]>=0.25.2
 watchdog>=3.0.0
