--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,10 @@ torch>=2.1.2
 torchvision>=0.16.2
 torchaudio>=2.1.2
 
-langchain>=0.0.352
-langchain-experimental>=0.0.47
+langchain>=0.1.0
+langchain_openai>=0.0.2
+langchain-community>=1.0.0
+
 pydantic==1.10.13
 fschat==0.2.35
 openai==1.9.0
