--- a/configs/server_config.py.example
+++ b/configs/server_config.py.example
@@ -128,6 +128,9 @@ FSCHAT_MODEL_WORKERS = {
     "tiangong-api": {
         "port": 21009,
     },
+    "gemini-api": {
+        "port": 21012,
+    },
 }
 
 # fastchat multi model worker server
