--- a/requirements_lite.txt
+++ b/requirements_lite.txt
@@ -27,7 +27,7 @@ numpy~=1.24.4
 pandas~=2.0.3
 einops>=0.7.0
 transformers_stream_generator==0.0.4
-vllm==0.2.6; sys_platform == "linux"
+vllm==0.2.7; sys_platform == "linux"
 httpx[brotli,http2,socks]==0.25.2
 requests
 pathlib
@@ -54,11 +54,11 @@ metaphor-python~=0.1.23
 
 # WebUI requirements
 
-streamlit>=1.29.0
-streamlit-option-menu>=0.3.6
-streamlit-antd-components>=0.3.0
-streamlit-chatbox>=1.1.11
-streamlit-modal>=0.1.0
-streamlit-aggrid>=0.3.4.post3
-httpx[brotli,http2,socks]>=0.25.2
-watchdog>=3.0.0
+streamlit==1.30.0
+streamlit-option-menu==0.3.6
+streamlit-antd-components==0.3.1
+streamlit-chatbox==1.1.11
+streamlit-modal==0.1.0
+streamlit-aggrid==0.3.4.post3
+httpx==0.26.0
+watchdog==3.0.0
