--- a/requirements.txt
+++ b/requirements.txt
@@ -38,13 +38,11 @@ numpy~=1.24.4
 pandas~=2.0.3
 einops>=0.7.0
 transformers_stream_generator==0.0.4
-vllm==0.2.6; sys_platform == "linux"
-httpx[brotli,http2,socks]==0.25.2
-llama-index
+vllm==0.2.7; sys_platform == "linux"
 
 # optional document loaders
 
-# rapidocr_paddle[gpu]>=1.3.0.post5 # gpu accelleration for ocr of pdf and image files
+#rapidocr_paddle[gpu]>=1.3.0.post5 # gpu accelleration for ocr of pdf and image files
 jq==1.6.0 # for .json and .jsonl files. suggest `conda install jq` on windows
 beautifulsoup4~=4.12.2 # for .mhtml files
 pysrt~=1.1.2
@@ -69,9 +67,11 @@ metaphor-python~=0.1.23
 
 # WebUI requirements
 
-streamlit~=1.29.0
-streamlit-option-menu>=0.3.6
+streamlit==1.30.0
+streamlit-option-menu==0.3.6
+streamlit-antd-components==0.3.1
 streamlit-chatbox==1.1.11
-streamlit-modal>=0.1.0
-streamlit-aggrid>=0.3.4.post3
-watchdog>=3.0.0
+streamlit-modal==0.1.0
+streamlit-aggrid==0.3.4.post3
+httpx==0.26.0
+watchdog==3.0.0
