删除fastchat的配置

--- a/configs/basic_config.py.example
+++ b/configs/basic_config.py.example
@@ -36,3 +36,5 @@ BASE_TEMP_DIR = os.path.join(tempfile.gettempdir(), "chatchat")
 if os.path.isdir(BASE_TEMP_DIR):
     shutil.rmtree(BASE_TEMP_DIR)
 os.makedirs(BASE_TEMP_DIR, exist_ok=True)
+
+MEDIA_PATH = None
