集成openai_plugins/imitater插件

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ logs
 /knowledge_base/samples/vector_store
 
 /configs/*.py
+/configs/loom.yaml
 .vscode/
 
 # below are standard python ignore files
